RESOLVED FIXED216626
[iOS] YouTube does not route video to AirPlay the first time
https://bugs.webkit.org/show_bug.cgi?id=216626
Summary [iOS] YouTube does not route video to AirPlay the first time
Jer Noble
Reported 2020-09-16 16:48:37 PDT
[iOS] YouTube does not route video to AirPlay the first time
Attachments
Patch (2.11 KB, patch)
2020-09-16 16:56 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-09-16 16:50:03 PDT
Jer Noble
Comment 2 2020-09-16 16:56:09 PDT
EWS
Comment 3 2020-09-17 10:47:33 PDT
Committed r267198: <https://trac.webkit.org/changeset/267198> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408962 [details].
Note You need to log in before you can comment on or make changes to this bug.