Cherry-pick r267198. rdar://problem/69594065

[iOS] YouTube does not route video to AirPlay the first time
    https://bugs.webkit.org/show_bug.cgi?id=216626
    <rdar://problem/62222846>

    Reviewed by Eric Carlson.

    Difficult to test this, since it requires an live AppleTV device.

    During a refactor, the order of a couple calls changed. A MediaPlaybackTarget needs to be in place before the MediaPlayer can
    be told to start playing to that target. Once the target is in-place, subsequent requests to start playing to that target succeed,
    which explains the "only initial AirPlay fails" behavior.

    * platform/audio/ios/MediaSessionManagerIOS.mm:
    (WebCore::MediaSessionManageriOS::activeVideoRouteDidChange):

    Canonical link: https://commits.webkit.org/229472@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267198 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.171@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@267676 268f45cc-cd09-0410-ab3c-d52691b4dbfc